# dawn

./: .gitignore  CODEX_START.md  FILE_INDEX.md  Makefile  PLANS.md  README.md  compose.yaml  skyline:horizon arch.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/src/cloud_ui/: api.py  cli.py  config.py  db.py  health.py  logging.py  mq.py  worker.py
backend/src/cloud_ui/audit/: __init__.py  delivery.py  json_schema.py  models.py  redaction.py  repository.py  routes.py  schema.py  sink.py  sinks.py  taxonomy.py
backend/src/cloud_ui/groups/: __init__.py  models.py  repository.py  routes.py  rules.py  schema.py
backend/src/cloud_ui/integrations/: __init__.py  base.py  http.py
backend/src/cloud_ui/inventory/: __init__.py  cursor.py  models.py  reconciliation.py  repository.py  routes.py  scale_report.py  (+2 more)
backend/tests/: test_api_health.py  test_cli.py  test_config.py  test_db.py  test_redaction.py  test_secret_scan_script.py
backend/tests/audit/: test_audit_api.py  test_audit_migration.py  test_audit_redaction.py  test_delivery_worker.py  test_durable_sink.py  test_heartbeat.py  test_models.py  test_repository.py  test_sinks.py  test_taxonomy.py
backend/tests/groups/: test_group_api.py  test_group_migration.py  test_group_repository.py  test_group_rules.py
backend/tests/integrations/: test_base.py  test_http.py  test_keystone_adapter.py  test_mistral_live_smoke.py  test_nova_adapter.py  test_placement_adapter.py
backend/tests/inventory/: test_cursor.py  test_inventory_api.py  test_inventory_migration.py  test_reconciliation.py  test_repository.py  test_scale_report.py
backend/tests/operations/: test_input_validation.py  test_mistral_mock.py  test_operation_api.py  test_operation_migration.py  test_operation_repository.py  test_operation_worker.py  test_state_machine.py  test_watcher_masakari_api.py  test_workflow_catalog.py
backend/tests/secrets/: test_provider.py  test_readiness.py  test_vault_adapter.py
backend/tests/security/: test_audit.py  test_e08_container_hardening.py  test_e08_dkb_gaps.py  test_e08_security_docs.py  test_e08_security_review.py  test_e08_supply_chain.py  test_mock_identity.py  test_security_api.py  test_security_migration.py  test_sessions.py
(+288 files in other folders)
