[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-ui"
version = "0.1.0"
description = "OpenStack cloud UI backend"
requires-python = ">=3.11,<3.12"
dependencies = [
  "alembic==1.16.2",
  "fastapi==0.115.13",
  "httpx==0.28.1",
  "pika==1.3.2",
  "pydantic-settings==2.9.1",
  "pymysql==1.1.1",
  "python-json-logger==3.3.0",
  "sqlalchemy==2.0.41",
  "uvicorn[standard]==0.34.3"
]

[project.optional-dependencies]
dev = [
  "mypy==1.16.1",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.0"
]

[project.scripts]
cloud-ui = "cloud_ui.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cloud_ui.migrations" = ["script.py.mako"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []

[[tool.mypy.overrides]]
module = ["pika"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
